...
                          indicatorColor: Color(0xFFA52A2A),
                          tabs: [
                            Tab(
                              text: 'Signup',
                            ),
                            Tab(
                              key: ValueKey('LoginTab_2xl7'),
                              text: 'Login',
                            ),
                          ],
                          controller: _model.tabBarController,
                          onTap: (i) async {
                            [
...
                              mainAxisSize: MainAxisSize.max,
                              children: [
                                Flexible(
                                  child: Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('Signup-Email_v84z'),
                                      controller:
                                          _model.signupEmailTextController,
                                      focusNode: _model.signupEmailFocusNode,
                                      onChanged: (_) => EasyDebounce.debounce(
                                        '_model.signupEmailTextController',
                                        Duration(milliseconds: 2000),
...
                                    ),
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('Signup-Password_j3mb'),
                                    controller:
                                        _model.signupPasswordTextController,
                                    focusNode: _model.signupPasswordFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.next,
                                    obscureText:
...
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key:
                                        ValueKey('Signup-ConfirmPassword_1g2d'),
                                    controller: _model
                                        .signupConfirmPasswordTextController,
                                    focusNode:
                                        _model.signupConfirmPasswordFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.done,
...
                            Column(
                              mainAxisSize: MainAxisSize.max,
                              children: [
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('Login-Email_goqq'),
                                    controller: _model.loginEmailTextController,
                                    focusNode: _model.loginEmailFocusNode,
                                    onChanged: (_) => EasyDebounce.debounce(
                                      '_model.loginEmailTextController',
                                      Duration(milliseconds: 2000),
                                      () => safeSetState(() {}),
...
                                        .asValidator(context),
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('Login-Password_1qiv'),
                                    controller:
                                        _model.loginPasswordTextController,
                                    focusNode: _model.loginPasswordFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.done,
                                    obscureText:
...
                  ),
                ),
                Stack(
                  children: [
                    if (_model.isLogin == true)
                      FFButtonWidget(
                        key: ValueKey('Login-Button'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'ACCOUNT_CREATION_Login-Button_ON_TAP');
                          currentUserLocationValue =
                              await getCurrentUserLocation(
                                  defaultLocation: LatLng(0.0, 0.0));
...
                          elevation: 0.0,
                          borderRadius: BorderRadius.circular(8.0),
                        ),
                      ),
                    if (_model.isLogin == false)
                      FFButtonWidget(
                        key: ValueKey('Signup-Button_lsmf'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'ACCOUNT_CREATION_Signup-Button_ON_TAP');
                          currentUserLocationValue =
                              await getCurrentUserLocation(
                                  defaultLocation: LatLng(0.0, 0.0));
...
