...
                          ],
                        ),
                      ),
                      Container(
                        width: double.infinity,
                        child: TextFormField(
                          key: ValueKey('Name_x92o'),
                          controller: _model.nameTextController,
                          focusNode: _model.nameFocusNode,
                          onChanged: (_) => EasyDebounce.debounce(
                            '_model.nameTextController',
                            Duration(milliseconds: 2000),
                            () => safeSetState(() {}),
...
                              fontStyle: FlutterFlowTheme.of(context)
                                  .bodyMedium
                                  .fontStyle,
                            ),
                      ),
                      FlutterFlowDropDown<String>(
                        key: ValueKey('DropDown_mrxs'),
                        controller: _model.dropDownValueController ??=
                            FormFieldController<String>(null),
                        options: ['Beginner', 'Intermediate', 'Expert'],
                        onChanged: (val) =>
                            safeSetState(() => _model.dropDownValue = val),
                        width: double.infinity,
...
                        isMultiSelect: false,
                      ),
                    ].divide(SizedBox(height: 24.0)),
                  ),
                ),
                FFButtonWidget(
                  key: ValueKey('Button_k7kz'),
                  onPressed: () async {
                    logFirebaseEvent('ONBOARDING_COMPLETE_PROFILE_BTN_ON_TAP');
                    logFirebaseEvent('Button_backend_call');

                    await currentUserReference!.update(createUsersRecordData(
                      displayName: _model.nameTextController.text,
...
