...
        appBar: AppBar(
          backgroundColor: FlutterFlowTheme.of(context).primary,
          automaticallyImplyLeading: false,
          title: Padding(
            padding: EdgeInsetsDirectional.fromSTEB(0.0, 50.0, 0.0, 50.0),
            child: Text(
              key: ValueKey('Text_jtyt'),
              FFDevEnvironmentValues().isDevOn ? 'DEVMODE' : 'FitForge',
              style: FlutterFlowTheme.of(context).headlineMedium.override(
                    font: GoogleFonts.hind(
                      fontWeight: FontWeight.bold,
                      fontStyle:
                          FlutterFlowTheme.of(context).headlineMedium.fontStyle,
...
